<resources>
    <string name="app_name">barber shop - lesson 3</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">Y2cN6NTy0P1MUmndzMECdqhiSAxtkrCc4tzebYWz</string>
    <string name="back4app_client_key">wYXnt175nXJYQh6ZScrlCm82jkRbMDqpHP7K3WQJ</string>


    <!-- Login Activity -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset your password</string>
    <string name="please_insert">Please, insert</string>
    <string name="an_username">an username</string>
    <string name="and">and</string>
    <string name="a_password">a password</string>
    <string name="wait">Please, wait a moment.</string>
    <string name="logging">Logging in...</string>
    <string name="sucessful_login">Sucessful Login</string>
    <string name="welcome_back">Welcome back</string>
    <string name="unsucessful_login">Login failed!</string>
    <string name="ok">OK</string>
    <string name="cant_login">It wasn\'t possible to login, please try again.</string>
    <string name="really_reset_password">If you really want to reset your password, insert the email associated to your account and click on the CONFIRM button.</string>
    <string name="required_email">Email*</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="not_valid_email">Enter a valid email adress.</string>
    <string name="reset_instructions_sent">An email was sucessfuly sent with reset instructions.</string>
    <string name="error_reseting">Something went wrong. Please, try again.</string>
    <string name="email_empty">Insert your email to reset your password.</string>
    <string name="email_not_found">We couldn\'t find a user associated to this email. Please, try again.</string>


    <!-- Welcome Activity -->
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="no_credit_card">No credit card required :)</string>
    <string name="welcome_message">This is the Back4App Barber Shop App Template made to help you to master Back4App\'s Serverless Platform!\nLet\'s get started!</string>

    <!-- Register Activity -->
    <string name="username_">Username*</string>
    <string name="email_">Email*</string>
    <string name="password_">Password*</string>
    <string name="password_again_">Password Again*</string>
    <string name="choose_photo">Choose your profile photo.</string>
    <string name="message_successful_creation">Account created successfully!</string>
    <string name="message_unsuccessful_creation">Error: Account creation failed.</string>
    <string name="not_created">Account could not be created</string>
    <string name="please_complete">Please complete correctly</string>
    <string name="required_field">the required field</string>
    <string name="required_fields">the required fields</string>
    <string name="password_again">Password Again</string>
    <string name="email">Email</string>
    <string name="not_matching_passwords">Insert matching passwords.</string>
    <string name="signing">Signing in…</string>
    <string name="verify_email">Please, verify your email before login.</string>
    <string name="error_uploading_photo">Sorry, some error occured while loading your profile photo. Please, try again later.</string>



</resources>
