<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="27dp"
    android:paddingStart="27dp"
    android:paddingRight="27dp"
    android:paddingEnd="27dp"
    android:paddingBottom="27dp"
    android:paddingTop="27dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="8dp"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/really_reset_password"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#696969"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:hint="@string/required_email"
        android:textColorHint="#696969"
        android:singleLine="true"
        android:fontFamily="@font/roboto_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="end"
        android:orientation="horizontal">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#000000"
            android:background="@drawable/button_border"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#FFFF"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:background="@drawable/button_black"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/confirm" />


    </LinearLayout>

</LinearLayout>