<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wood"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/top"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="480dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/background_welcome">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:textSize="40sp"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome"
                    android:textColor="#61512a"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/roboto_light"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome_message"
                    android:textColor="#61512a"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/roboto_regular"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_button"
                    android:layout_marginTop="44dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/login"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/button_border"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_button"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/register"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/button_black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:textColor="#61512a"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/no_credit_card" />


            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/footer" />


    </LinearLayout>

</ScrollView>