<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wood"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/top"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="850dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/background_welcome">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="40sp"
                    android:gravity="center_horizontal"
                    android:text="@string/register"
                    android:textColor="#61512a"
                    android:fontFamily="@font/roboto_light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="28dp"
                    android:layout_marginStart="27dp"
                    android:layout_marginLeft="27dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginRight="26dp" >

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/facebook_button"
                        android:src="@drawable/btn_facebook"/>

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/twitter_button"
                        android:src="@drawable/btn_twitter"
                        android:layout_marginStart="80dp"
                        android:layout_marginLeft="80dp"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/div_or"/>


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:id="@+id/profile_photo"
                        android:src="@drawable/ic_account_circle_black_24dp"
                        android:layout_centerInParent="true"/>

                    <ImageView
                        android:id="@+id/edit_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="100dp"
                        android:layout_alignRight="@+id/profile_photo"
                        android:layout_alignEnd="@+id/profile_photo"
                        android:src="@drawable/btn_edit"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="28dp"
                    android:background="@drawable/button_border">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="56dp"
                        android:id="@+id/username"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/username_"
                        android:textColorHint="#696969"
                        android:textSize="16sp"
                        android:textColor="#61512a"
                        android:fontFamily="@font/roboto_regular"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="28dp"
                    android:background="@drawable/button_border">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="56dp"
                        android:id="@+id/email"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/email_"
                        android:inputType="textEmailAddress"
                        android:textColorHint="#696969"
                        android:textSize="16sp"
                        android:textColor="#61512a"
                        android:fontFamily="@font/roboto_regular"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="28dp"
                    android:background="@drawable/button_border">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="56dp"
                        android:id="@+id/password"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/password_"
                        android:inputType="textPassword"
                        android:textColorHint="#696969"
                        android:textSize="16sp"
                        android:textColor="#61512a"
                        android:fontFamily="@font/roboto_regular"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="28dp"
                    android:background="@drawable/button_border">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="56dp"
                        android:id="@+id/password_again"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/password_again_"
                        android:inputType="textPassword"
                        android:textColorHint="#696969"
                        android:textSize="16sp"
                        android:textColor="#61512a"
                        android:fontFamily="@font/roboto_regular"/>

                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_button"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/register"
                    android:background="@drawable/button_black"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>